# telegram-summary-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/agents/: telegram-summary-bot.agent.md
src/summary_messages/: __init__.py  __main__.py  bot.py  config.py  db.py  llm.py  prompts.py  reminder.py  service.py
src/summary_messages/bot/: __init__.py  bot.py
src/summary_messages/configs/: settings.py
src/summary_messages/graph/: __init__.py  agent.py  tools.py
src/summary_messages/models/: __init__.py  message.py  prompt.py  summary.py
src/summary_messages/repositories/: database.py
src/summary_messages/services/: __init__.py  games.py  llm_client.py  prompts.py  summary_service.py
tests/: test_agent.py  test_bot.py  test_config.py  test_service.py
