[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "summary-messages"
version = "0.1.0"
description = "Telegram group summarizer with SQLite and multi-provider LLM support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "APScheduler>=3.10.4",
  "google-genai>=0.5.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "langchain-openai>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "openai>=1.40.0",
  "psycopg[binary]>=3.3.4",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-telegram-bot[job-queue,rate-limiter]>=21.6",
  "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[project.scripts]
summary-messages = "summary_messages.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/summary_messages"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
